--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,35 @@
 logsBucket: gs://scenic-impact-326208_cloudbuild
 
 steps:
+  # Build da imagem Docker
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA', '-f', 'Dockerfile', '.']
+    args:
+      [
+        'build',
+        '-t',
+        'gcr.io/$PROJECT_ID/vouemprovas:$COMMIT_SHA',
+        '-f',
+        'Dockerfile',
+        '.'
+      ]
+
+  # Deploy automático no Cloud Run
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      [
+        'run',
+        'deploy',
+        'vouemprovas',
+        '--image',
+        'gcr.io/$PROJECT_ID/vouemprovas:$COMMIT_SHA',
+        '--region',
+        'southamerica-east1',
+        '--platform',
+        'managed',
+        '--allow-unauthenticated',
+        '--port',
+        '8080'
+      ]
 
 images:
-  - 'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/vouemprovas:$COMMIT_SHA'
